@@ -1,19 +1,20 @@
 package com.sprint.Book_Partner_Application.publisher.service;
 
-import com.sprint.Book_Partner_Application.book.dto.TitleDTO;
 import com.sprint.Book_Partner_Application.book.entity.Title;
 import com.sprint.Book_Partner_Application.book.repository.TitleRepository;
 import com.sprint.Book_Partner_Application.dto.PageResponse;
-import com.sprint.Book_Partner_Application.employee.dto.EmployeeDTO;
+import com.sprint.Book_Partner_Application.employee.dto.response.EmployeeResponse;
 import com.sprint.Book_Partner_Application.employee.entity.Employee;
 import com.sprint.Book_Partner_Application.employee.repository.EmployeeRepository;
-
-import com.sprint.Book_Partner_Application.exception.*;
-
-import com.sprint.Book_Partner_Application.publisher.dto.PublisherDTO;
+import com.sprint.Book_Partner_Application.exception.BusinessValidationException;
+import com.sprint.Book_Partner_Application.exception.DuplicateResourceException;
+import com.sprint.Book_Partner_Application.exception.ResourceInUseException;
+import com.sprint.Book_Partner_Application.exception.ResourceNotFoundException;
+import com.sprint.Book_Partner_Application.publisher.dto.request.PublisherCreateRequest;
+import com.sprint.Book_Partner_Application.publisher.dto.request.PublisherUpdateRequest;
+import com.sprint.Book_Partner_Application.publisher.dto.response.PublisherResponse;
 import com.sprint.Book_Partner_Application.publisher.entity.Publisher;
 import com.sprint.Book_Partner_Application.publisher.repository.PublisherRepository;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -21,7 +22,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,16 +32,13 @@ public class PublisherServiceImpl implements PublisherService {
     private final EmployeeRepository employeeRepository;
     private final TitleRepository titleRepository;
 
-
     @Override
-    public PublisherDTO.Response createPublisher(PublisherDTO.Request request) {
+    public PublisherResponse createPublisher(PublisherCreateRequest request) {
 
-        // Duplicate check
         if (publisherRepository.existsById(request.getPubId())) {
             throw new DuplicateResourceException("Publisher", "pubId", request.getPubId());
         }
 
-        // Business validation
         if (request.getState() != null && request.getState().length() != 2) {
             throw new BusinessValidationException("state", "must be exactly 2 characters");
         }
@@ -57,10 +54,9 @@ public class PublisherServiceImpl implements PublisherService {
         return mapToResponse(publisherRepository.save(publisher));
     }
 
-
     @Override
     @Transactional(readOnly = true)
-    public PageResponse<PublisherDTO.Response> getAllPublishers(
+    public PageResponse<PublisherResponse> getAllPublishers(
             String city, String state, String country, Pageable pageable) {
 
         Page<Publisher> page = publisherRepository.findWithFilters(city, state, country, pageable);
@@ -70,7 +66,7 @@ public class PublisherServiceImpl implements PublisherService {
 
     @Override
     @Transactional(readOnly = true)
-    public PublisherDTO.Response getPublisherById(String pubId) {
+    public PublisherResponse getPublisherById(String pubId) {
 
         Publisher publisher = publisherRepository.findById(pubId)
                 .orElseThrow(() -> new ResourceNotFoundException("Publisher", "pubId", pubId));
@@ -78,9 +74,8 @@ public class PublisherServiceImpl implements PublisherService {
         return mapToResponse(publisher);
     }
 
-
     @Override
-    public PublisherDTO.Response updatePublisher(String pubId, PublisherDTO.UpdateRequest request) {
+    public PublisherResponse updatePublisher(String pubId, PublisherUpdateRequest request) {
 
         Publisher publisher = publisherRepository.findById(pubId)
                 .orElseThrow(() -> new ResourceNotFoundException("Publisher", "pubId", pubId));
@@ -100,15 +95,12 @@ public class PublisherServiceImpl implements PublisherService {
         return mapToResponse(publisherRepository.save(publisher));
     }
 
-    // ───────────────── DELETE ─────────────────
-
     @Override
     public void deletePublisher(String pubId) {
 
         Publisher publisher = publisherRepository.findById(pubId)
                 .orElseThrow(() -> new ResourceNotFoundException("Publisher", "pubId", pubId));
 
-        // Check child dependencies
         boolean hasEmployees = employeeRepository.existsByPublisher_PubId(pubId);
         boolean hasTitles = titleRepository.existsByPublisher_PubId(pubId);
 
@@ -125,7 +117,7 @@ public class PublisherServiceImpl implements PublisherService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<EmployeeDTO.Response> getEmployeesByPartner(String pubId) {
+    public List<EmployeeResponse> getEmployeesByPartner(String pubId) {
 
         publisherRepository.findById(pubId)
                 .orElseThrow(() -> new ResourceNotFoundException("Publisher", "pubId", pubId));
@@ -133,7 +125,7 @@ public class PublisherServiceImpl implements PublisherService {
         return employeeRepository.findByPublisher_PubId(pubId)
                 .stream()
                 .map(this::mapEmployee)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -143,17 +135,19 @@ public class PublisherServiceImpl implements PublisherService {
         publisherRepository.findById(pubId)
                 .orElseThrow(() -> new ResourceNotFoundException("Publisher", "pubId", pubId));
 
-        List<Title> titles = titleRepository.findByPublisher_PubId(pubId, Pageable.unpaged()).getContent();
+        List<Title> titles = titleRepository
+                .findByPublisher_PubId(pubId, Pageable.unpaged())
+                .getContent();
 
         return titles.stream()
                 .map(this::mapTitle)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ───────────────── MAPPERS ─────────────────
+    // ─────────────── MAPPERS ───────────────
 
-    private PublisherDTO.Response mapToResponse(Publisher p) {
-        return PublisherDTO.Response.builder()
+    private PublisherResponse mapToResponse(Publisher p) {
+        return PublisherResponse.builder()
                 .pubId(p.getPubId())
                 .pubName(p.getPubName())
                 .city(p.getCity())
@@ -162,8 +156,8 @@ public class PublisherServiceImpl implements PublisherService {
                 .build();
     }
 
-    private EmployeeDTO.Response mapEmployee(Employee e) {
-        return EmployeeDTO.Response.builder()
+    private EmployeeResponse mapEmployee(Employee e) {
+        return EmployeeResponse.builder()
                 .empId(e.getEmpId())
                 .fname(e.getFname())
                 .minit(e.getMinit())
